--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "license": "MIT",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.22.15",
+    "@jest/globals": "^29.7.0",
     "@types/react": "^18.2.21",
     "@types/redux": "^3.6.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jsdom": "^22.1.0",
     "typescript": "^5.2.2"
   },
-  "dependencies": {},
   "files": [
     "dist/**/*",
     "src/**/*"
