--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@b2chat/chat-center-widget-sdk",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "bump:patch": "yarn version --no-git-tag-version --patch",
+    "bump:minor": "yarn version --no-git-tag-version --minor",
+    "bump:major": "yarn version --no-git-tag-version --major",
+    "postversion": "bin/postversion.sh"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
