--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@b2chat/chat-center-widget-sdk",
+  "name": "@b2chatorg/chat-center-widget-sdk",
   "version": "1.1.1",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -28,5 +28,8 @@
   "files": [
     "dist/**/*",
     "src/**/*"
-  ]
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
